Clean up in pom files